--- a/client/public/cat.css
+++ b/client/public/cat.css
@@ -95,17 +95,37 @@
   animation: blink is infinite;
 }
 
-@keyframes RandomTalk {
-  0% { background-position: 0% 97%; }
-  50% { background-position: 100% 4%; }
-  100% { background-position: 0% 97%; }
+#root {
+  height: 100vh;  /* The height of the root element is 100% of the viewport height */
+  background: linear-gradient(0deg, #fda065, #4f535e); /* New gradient direction and colors */
+  background-size: 400% 400%; /* Updated size */
+  animation: AnimationName 22s ease infinite; /* New animation details */
 }
 
-#root {
-  height: 100vh;  
-  background: linear-gradient(321deg, #fda065, #ad574a, #4f535e);
-  background-size: 600% 600%;
-  animation: RandomTalk 30s ease infinite;
+/* Standard syntax */
+@keyframes AnimationName {
+  0% { background-position: 47% 0%; }
+  50% { background-position: 54% 100%; }
+  100% { background-position: 47% 0%; }
+}
+
+/* Firefox */
+@-moz-keyframes AnimationName {
+  0% { background-position: 47% 0%; }
+  50% { background-position: 54% 100%; }
+  100% { background-position: 47% 0%; }
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes AnimationName {
+  0% { background-position: 47% 0%; }
+  50% { background-position: 54% 100%; }
+  100% { background-position: 47% 0%; }
+}
+
+.rounded-map {
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 /* #quote {
