--- a/client/public/cat.css
+++ b/client/public/cat.css
@@ -128,6 +128,10 @@
   overflow: hidden;
 }
 
+.image-container {
+  margin: auto;
+  display: flex;
+}
 /* #quote {
   color: #25fd01;
   font: 400 2em consolas;
